--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <title>one piece</title>
-  <link rel="stylesheet" href="http://at.alicdn.com/t/font_563573_skg9w5tv15szia4i.css">
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_563573_skg9w5tv15szia4i.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/index.css">
 </head>
